diesel_compile_tests/tests/fail/mysql_does_not_support_window_functions_with_exclusion.stderr
error[E0277]: `ExcludeGroup` is no valid SQL fragment for the `Mysql` backend
  --> tests/fail/mysql_does_not_support_window_functions_with_exclusion.rs:58:17
   |
58 |           .select(Box::new(
   |  _________________^
59 | |             dsl::count(users::id).frame_by(
60 | |                 dsl::frame::Rows
61 | |                     .frame_start_with_exclusion(dsl::frame::CurrentRow, dsl::frame::ExcludeGroup),
62 | |             ),
63 | |         ) as Box<dyn BoxableExpression<_, _, SqlType = _>>)
   | |_________^ the trait `QueryFragment<Mysql, NoFrameFrameExclusionSupport>` is not implemented for `ExcludeGroup`
   |
   = note: this usually means that the `Mysql` database system does not support
           this SQL syntax
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             `ExcludeGroup` implements `QueryFragment<DB, FrameExclusionSupport>`
             `ExcludeGroup` implements `QueryFragment<DB>`
   = note: required for `ExcludeGroup` to implement `QueryFragment<Mysql>`
   = note: 4 redundant requirements hidden
   = note: required for `diesel::expression::functions::aggregate_expressions::AggregateExpression<diesel::expression::count::count_utils::count<diesel::sql_types::Integer, columns::id>, diesel::expression::functions::aggregate_expressions::prefix::NoPrefix, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::aggregate_filter::NoFilter, OverClause<diesel::expression::functions::aggregate_expressions::partition_by::NoPartition, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::frame_clause::FrameClause<diesel::expression::functions::aggregate_expressions::frame_clause::StartFrame<Rows, CurrentRow, ExcludeGroup>>>>` to implement `QueryFragment<Mysql>`
   = note: required for `diesel::expression::functions::aggregate_expressions::AggregateExpression<diesel::expression::count::count_utils::count<diesel::sql_types::Integer, columns::id>, diesel::expression::functions::aggregate_expressions::prefix::NoPrefix, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::aggregate_filter::NoFilter, OverClause<diesel::expression::functions::aggregate_expressions::partition_by::NoPartition, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::frame_clause::FrameClause<diesel::expression::functions::aggregate_expressions::frame_clause::StartFrame<Rows, CurrentRow, ExcludeGroup>>>>` to implement `diesel::BoxableExpression<users::table, Mysql>`
   = note: required for the cast from `Box<diesel::expression::functions::aggregate_expressions::AggregateExpression<diesel::expression::count::count_utils::count<diesel::sql_types::Integer, columns::id>, diesel::expression::functions::aggregate_expressions::prefix::NoPrefix, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::aggregate_filter::NoFilter, OverClause<diesel::expression::functions::aggregate_expressions::partition_by::NoPartition, diesel::expression::functions::aggregate_expressions::aggregate_order::NoOrder, diesel::expression::functions::aggregate_expressions::frame_clause::FrameClause<diesel::expression::functions::aggregate_expressions::frame_clause::StartFrame<Rows, CurrentRow, ExcludeGroup>>>>>` to `Box<dyn diesel::BoxableExpression<users::table, Mysql, SqlType = BigInt>>`
